// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButtons/> with active 1`] = `
<div
  className="toggle btn-group toggle-off control-toggle-btn-group"
>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    a
  </button>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    b
  </button>
</div>
`;

exports[`<ToggleButtons/> with className 1`] = `
<div
  className="toggle btn-group testing-cls"
>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    a
  </button>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    b
  </button>
</div>
`;

exports[`<ToggleButtons/> without active 1`] = `
<div
  className="toggle btn-group control-toggle-btn-group"
>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    a
  </button>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    b
  </button>
</div>
`;
